--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "dependable": "~0.2.5",
     "winston": "~0.7.3",
     "async": "~0.8.0",
-    "mongoose": "~3.8.9"
+    "mongoose": "~3.8.9",
+    "chai": "~1.9.1"
   },
   "devDependencies": {
     "mocha": "*",
