--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "winston": "~0.7.3",
     "async": "~0.8.0",
     "mongoose": "~3.8.9",
-    "chai": "~1.9.1"
+    "chai": "~1.9.1",
+    "body-parser": "~1.2.0",
+    "express": "~4.2.0",
+    "amqplib": "~0.1.3"
   },
   "devDependencies": {
     "mocha": "*",
