--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "chai": "~1.9.1",
     "body-parser": "~1.2.0",
     "express": "~4.2.0",
-    "amqplib": "~0.1.3"
+    "amqplib": "~0.1.3",
+    "morgan": "~1.0.1"
   },
   "devDependencies": {
     "mocha": "*",
