--- a/package.json
+++ b/package.json
@@ -28,7 +28,11 @@
     "body-parser": "~1.2.0",
     "express": "~4.2.0",
     "amqplib": "~0.1.3",
-    "morgan": "~1.0.1"
+    "morgan": "~1.0.1",
+    "jsonwebtoken": "~0.4.0",
+    "bcrypt": "~0.7.8",
+    "express-session": "~1.2.0",
+    "cookie-parser": "~1.1.0"
   },
   "devDependencies": {
     "mocha": "*",
