--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "jsonwebtoken": "~0.4.0",
     "bcrypt": "~0.7.8",
     "express-session": "~1.2.0",
-    "cookie-parser": "~1.1.0"
+    "cookie-parser": "~1.1.0",
+    "esprima": "~1.2.2",
+    "escodegen": "~1.3.2"
   },
   "devDependencies": {
     "mocha": "*",
