--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "express-session": "~1.2.0",
     "cookie-parser": "~1.1.0",
     "esprima": "~1.2.2",
-    "escodegen": "~1.3.2"
+    "escodegen": "~1.3.2",
+    "lodash": "~2.4.1"
   },
   "devDependencies": {
     "mocha": "*",
