--- a/package.json
+++ b/package.json
@@ -22,10 +22,7 @@
   "dependencies": {
     "dependable": "~0.2.5",
     "winston": "~0.7.3",
-    "collections": "^1.1.0",
     "async": "~0.8.0",
-    "mongoose": "~3.8.9",
-    "chai": "~1.9.1",
     "body-parser": "~1.2.0",
     "express": "~4.2.0",
     "amqplib": "~0.1.3",
@@ -36,10 +33,13 @@
     "cookie-parser": "~1.1.0",
     "esprima": "~1.2.2",
     "escodegen": "~1.3.2",
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "backside-utils": "0.0.0",
+    "backside-memory-store": "0.0.0"
   },
   "devDependencies": {
     "mocha": "*",
+    "chai": "~1.9.1",
     "difflet": "~0.2.6"
   }
 }
