refactor AMQP, TokenAuth, UserPassAuth, and RuleTree into own modules

--- a/package.json
+++ b/package.json
@@ -35,7 +35,11 @@
     "escodegen": "~1.3.2",
     "lodash": "~2.4.1",
     "backside-utils": "0.0.0",
-    "backside-memory-store": "0.0.0"
+    "backside-memory-store": "0.0.0",
+    "backside-userpass-auth": "0.0.0",
+    "backside-amqp-messenger": "0.0.1",
+    "backside-mongo-store": "0.0.1",
+    "backside-ruletree-security": "0.0.0"
   },
   "devDependencies": {
     "mocha": "*",
