--- a/package.json
+++ b/package.json
@@ -22,20 +22,12 @@
   "dependencies": {
     "dependable": "~0.2.5",
     "winston": "~0.7.3",
-    "async": "~0.8.0",
     "body-parser": "~1.2.0",
     "express": "~4.2.0",
-    "amqplib": "~0.1.3",
     "morgan": "~1.0.1",
-    "jsonwebtoken": "~0.4.0",
-    "bcrypt": "~0.7.8",
     "express-session": "~1.2.0",
     "cookie-parser": "~1.1.0",
-    "esprima": "~1.2.2",
-    "escodegen": "~1.3.2",
-    "lodash": "~2.4.1",
     "backside-utils": "0.0.0",
-    "backside-memory-store": "0.0.0",
     "backside-userpass-auth": "0.0.0",
     "backside-amqp-messenger": "0.0.1",
     "backside-mongo-store": "0.0.1",
@@ -43,7 +35,7 @@
   },
   "devDependencies": {
     "mocha": "*",
-    "chai": "~1.9.1",
-    "difflet": "~0.2.6"
+    "backside-memory-store": "0.0.0",
+    "chai": "~1.9.1"
   }
 }
