--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "stomp"
   ],
   "author": "addisonj",
+  "contributors": [
+    "Trevor Dixon"
+  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/backside/backside-api/issues"
